added blue background, some text.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+  <style>
+  body {
+    background-color: lightblue;
+  }
+  </style>
+  <body>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
+	and Computer Science. </body>
+ </html>
