--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <style>
   body {
-    background-color: lightblue;
+    background-color: #dfe6e9;
   }
   </style>
-  <body>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
-	and Computer Science. </body>
+<head>Richard Chen - Developer. Student.</head> 
+ <body>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
+	xand Computer Science. </body>
  </html>
