Uploaded background picture.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
+
 <html>
-  <style>
-  body {
-    background-color: #dfe6e9;
-  }
-  </style>
-<head>Richard Chen - Developer. Student.</head> 
- <body>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
-	xand Computer Science. </body>
- </html>
+
+<body>
+
+<style>
+#title{
+background-image: url("contrail.jpg");
+background-repeat: no-repeat;
+background-position: center;
+background-size: 100%;
+
+
+text-align: center;
+vertical-align:center;
+/*margin-top: 100px;*/
+padding-top: 350px;
+padding-bottom: 550px;
+padding-left: 200px;
+padding-right: 200px;
+
+	
+} 
+</style>
+
+<div id = "title">
+
+<h1>Richard Chen</h1><h2> Developer. Student.</h2> 
+ 
+	 <p>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
+	and Computer Science. </p>
+
+</div>
+
+
+</body>
+</html>
