Added sub folders, changed structure.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 
 <html>
 
+<title>Richard Chen</title>
 <body>
+<style>
+body{
+	background-image: url('pictures/contrail.jpg');
+
+    background-position: center;
+    background-size: cover;
+	}
+</style>
 
 <style>
+
 #title{
-background-image: url("contrail.jpg");
-background-repeat: no-repeat;
-background-position: center;
-background-size: 100%;
 
 
 text-align: center;
 vertical-align:center;
-/*margin-top: 100px;*/
-padding-top: 350px;
-padding-bottom: 550px;
-padding-left: 200px;
-padding-right: 200px;
 
 	
 } 
@@ -25,7 +26,8 @@ padding-right: 200px;
 
 <div id = "title">
 
-<h1>Richard Chen</h1><h2> Developer. Student.</h2> 
+<h1>Richard Chen</h1>
+<h2> Developer. Student.</h2> 
  
 	 <p>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
 	and Computer Science. </p>
