--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
 
 <html>
 
+<head>
 <title>Richard Chen</title>
+<link rel="stylesheet" href="style/home_style.css">
+<meta charset="UTF-8">
+<meta name="author" content="Richard Chen">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
-<style>
-body{
-	background-image: url('pictures/contrail.jpg');
+	<div class="parallax"></div>
 
-    background-position: center;
-    background-size: cover;
-	}
-</style>
-
-<style>
-
-#title{
-
-
-text-align: center;
-vertical-align:center;
-
-	
-} 
-</style>
-
-<div id = "title">
-
-<h1>Richard Chen</h1>
-<h2> Developer. Student.</h2> 
- 
-	 <p>Hello, welcome to the personal website of Richard Chen. I am a sophomore at UC Berkeley studying Physics
-	and Computer Science. </p>
-
+		<h1>Richard Chen</h1>
+		<p>Professional Lover</p>
 </div>
-
-
 </body>
+
 </html>
