Added parallax effect. Chose font and color

--- a/index.html
+++ b/index.html
@@ -7,14 +7,37 @@
 <meta charset="UTF-8">
 <meta name="author" content="Richard Chen">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
-	<div class="parallax"></div>
+	<div id="parallax">
+		<!-- <hr class="hr"> -->
+		<h1 class = "header" id="name">Richard Chen</h1>
 
-		<h1>Richard Chen</h1>
-		<p>Professional Lover</p>
-</div>
+		<h2 class = "header" id="description">student developer photographer</h2>
+
+	</div>
+	<div class="about">
+		<h1 class="about">Meet Mr. Right</h1>
+		<p id="text" class="about">  Hi. My name is Richard Chen. This is just a placeholder. I'm putting a lot of text here to see
+			what the parallax effect looks like. Below is some Italian text of ECG's or something.</p>
+		<p id="text" class="about">
+
+			L'elettrocardiogramma (denotato con le sigle ECG ed EKG) è la riproduzione grafica dell'attività elettrica del cuore durante il suo funzionamento, registrata dalla superficie del corpo.
+
+La superficie del corpo umano e di quello animale emana piccole correnti elettriche, che nell'individuo a riposo si identificano nelle continue depolarizzazioni e ripolarizzazioni del cuore; ci si riferisce, praticamente, a tutta l'attività elettrica che si registra a livello del tronco. In effetti, i potenziali elettrici prodotti dal muscolo cardiaco sono la sommatoria di minime quantità di elettricità generate dalle singole cellule muscolari cardiache. Queste piccole correnti vengono registrate attraverso un apparecchio denominato elettrocardiografo, apparecchio che fu modificato e migliorato da Willem Einthoven e Marey nel 1903 e che è derivazione diretta di un galvanometro a corda. Molte delle convenzioni fissate da Einthoven sussistono in era moderna e costituiscono la base per molti aspetti dell'ECG moderno.
+
+Grazie alla conversione dell'energia elettrica in energia meccanica, le variazioni elettriche producono il movimento di un "meccanismo o sistema scrivente". L'energia elettrica è adeguatamente amplificata, in modo da poter trascrivere escursioni abbastanza ampie che consentano la registrazione di un segnale leggibile. Le deflessioni vengono impresse su carta, che si muove a velocità costante a contatto con il sistema che riporta sulla carta le onde registrate in funzione del tempo. Contemporaneamente all'oscillazione verticale delle linee prodotte dalle variazioni di potenziale, la carta scorre verso sinistra. Questa sincronizzazione permette di riportare il movimento verticale su un piano orizzontale, registrando le oscillazioni in rapporto alla loro durata nel tempo.
+
+Nell'ECG a 12 derivazioni, quattro elettrodi sono posizionati sugli arti del paziente e sei sulla superficie del torace. La grandezza complessiva del potenziale elettrico del cuore viene quindi misurata da dodici diversi angoli ("derivazioni") e viene registrata per un periodo di tempo (in genere dieci secondi). In questo modo, l'ampiezza e la direzione generali della depolarizzazione elettrica del cuore vengono catturate in ogni momento e per tutto il ciclo cardiaco. </p>
+
+
+	</div>
+
+
 </body>
+
 
 </html>
