Added social media links. Fixed positioning issues.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
 
 <body>
 	<div id="parallax">
-		<!-- <hr class="hr"> -->
-		<h1 class = "header" id="name">Richard Chen</h1>
+		<h1 class="header" id="name">Richard Chen</h1>
+		<h2 class="header" id="description">student developer photographer</h2>
+		<div id="links">
+			<a class="link" target="_" href="https://www.facebook.com/richard.p.chen1"><img class="icon" id="logopic" src="pictures/facebook.png" height=60px width=60px></a>
 
-		<h2 class = "header" id="description">student developer photographer</h2>
+			<a class="link" target="_" href="https://github.com/richard-chen169" ><img class="icon" id="logopic" src="pictures/github.png" height=60px width=60px></a>
 
+			<a class="link" target="_" href="https://www.linkedin.com/in/richard-chen-4593bb142/" ><img class="icon" id="logopic" src="pictures/linkedin.png" height=60px width=60px></a>
+
+			<a class="link" target="_" href="https://www.flickr.com/people/154301761@N07/" ><img class="icon" id="logopic" src="pictures/flickr.png" height=60px width=60px></a>
+
+			<a class="link" target="_" href="https://www.instagram.com/not_richardchen/" ><img class="icon" id="logopic" src="pictures/instagram.png" height=60px width=60px></a>
+
+			<a class="link" target="_" href="mailto:whoaitsrichard14@gmail.com" ><img class="icon" id="logopic" src="pictures/dreamstale.png" height=60px width=60px></a>
+
+		</div>
 	</div>
 	<div class="about">
-		<h1 class="about">Meet Mr. Right</h1>
+		<h1 class="about">About Me</h1>
 		<p id="text" class="about">  Hi. My name is Richard Chen. This is just a placeholder. I'm putting a lot of text here to see
 			what the parallax effect looks like. Below is some Italian text of ECG's or something.</p>
 		<p id="text" class="about">
