Added fade in and out options for social media links

--- a/index.html
+++ b/index.html
@@ -16,18 +16,30 @@
 		<h1 class="header" id="name">Richard Chen</h1>
 		<h2 class="header" id="description">student developer photographer</h2>
 		<div id="links">
-			<a class="link" target="_" href="https://www.facebook.com/richard.p.chen1"><img class="icon" id="logopic" src="pictures/facebook.png" height=60px width=60px></a>
 
-			<a class="link" target="_" href="https://github.com/richard-chen169" ><img class="icon" id="logopic" src="pictures/github.png" height=60px width=60px></a>
+			<div class="tooltip">
+				<a target="_" href="https://www.facebook.com/richard.p.chen1" title="facebook" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/facebook.png" height=60px width=60px></span></a>
+			</div>
 
-			<a class="link" target="_" href="https://www.linkedin.com/in/richard-chen-4593bb142/" ><img class="icon" id="logopic" src="pictures/linkedin.png" height=60px width=60px></a>
+			<div class="tooltip">
+				<a target="_" href="https://github.com/richard-chen169" title="github" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/github.png" height=60px width=60px></span></a>
+			</div>
 
-			<a class="link" target="_" href="https://www.flickr.com/people/154301761@N07/" ><img class="icon" id="logopic" src="pictures/flickr.png" height=60px width=60px></a>
-
-			<a class="link" target="_" href="https://www.instagram.com/not_richardchen/" ><img class="icon" id="logopic" src="pictures/instagram.png" height=60px width=60px></a>
-
-			<a class="link" target="_" href="mailto:whoaitsrichard14@gmail.com" ><img class="icon" id="logopic" src="pictures/dreamstale.png" height=60px width=60px></a>
-
+			<div class="tooltip">
+				<a target="_" href="https://www.linkedin.com/in/richard-chen-4593bb142/" title="linkedin" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/linkedin.png" height=60px width=60px></span></a>
+			</div>
+			
+			<div class="tooltip">
+				<a target="_" href="https://www.flickr.com/people/154301761@N07/" title="flickr" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/flickr.png" height=60px width=60px></span></a>
+			</div>
+			
+			<div class="tooltip">
+				<a target="_" href="https://www.instagram.com/not_richardchen/" title="instagram" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/instagram.png" height=60px width=60px></span></a>
+			</div>
+			
+			<div class="tooltip">
+				<a target="_" href="mailto:whoaitsrichard14@gmail.com" title="email" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/dreamstale.png" height=60px width=60px></span></a>
+			</div>
 		</div>
 	</div>
 	<div class="about">
@@ -47,8 +59,7 @@ Nell'ECG a 12 derivazioni, quattro elettrodi sono posizionati sugli arti del paz
 
 	</div>
 
-
 </body>
 
-
+<a href="#" title="Text text text text" class="tooltip"><span title="More">CSS3     Tooltip</span></a>
 </html>
