Added picture and updated about section.

--- a/index.html
+++ b/index.html
@@ -96,22 +96,36 @@ setTimeout(function() {
 
 		</div>
 	</div>
+
+	<img id="picture" src="pictures/profilecircle.jpg" >
+
 	<div class="about">
 		<h1 class="about">About Me</h1>
-		<p id="text" class="about">  Hi. My name is Richard Chen. This is just a placeholder. I'm putting a lot of text here to see
-			what the parallax effect looks like. Below is some Italian text of ECG's or something.</p>
-		<p id="text" class="about">
+		<p id="text">  Hi, my name is Richard Chen. I'm currently a sophomore at UC Berkeley studying Computer Science
+					   and Physics.
+		</p>
 
-			L'elettrocardiogramma (denotato con le sigle ECG ed EKG) è la riproduzione grafica dell'attività elettrica del cuore durante il suo funzionamento, registrata dalla superficie del corpo.
+		<p id="text">  I have many years of experience working in laboratory and research settings. I have previously worked
+						in labs such as the Space Power and Propulsion Laboratory at University of Maryland, College Park,
+						the National Institute of Standards and Technology, and Lawrence
+						Berkeley National Laboratory with Dr. Akito Kusaka on the POLARBEAR2 experiment.
+						I am currently working with Dr. Paul Fallon at Lawrence Berkeley National Laboratory on the 
+						<a target="_" href="http://gretina.lbl.gov/" title="GRETINA">GRETINA</a>
+						experiment investigating the efficiency of HPGe detectors.
+		</p>
 
-La superficie del corpo umano e di quello animale emana piccole correnti elettriche, che nell'individuo a riposo si identificano nelle continue depolarizzazioni e ripolarizzazioni del cuore; ci si riferisce, praticamente, a tutta l'attività elettrica che si registra a livello del tronco. In effetti, i potenziali elettrici prodotti dal muscolo cardiaco sono la sommatoria di minime quantità di elettricità generate dalle singole cellule muscolari cardiache. Queste piccole correnti vengono registrate attraverso un apparecchio denominato elettrocardiografo, apparecchio che fu modificato e migliorato da Willem Einthoven e Marey nel 1903 e che è derivazione diretta di un galvanometro a corda. Molte delle convenzioni fissate da Einthoven sussistono in era moderna e costituiscono la base per molti aspetti dell'ECG moderno.
+		<p id="text"> In 2017, I was honored as a Regeneron Science Talent Search semifinalist for my paper on the research
+					  I conducted at the Space Power and Propulsion Laboratory at UMD.  
 
-Grazie alla conversione dell'energia elettrica in energia meccanica, le variazioni elettriche producono il movimento di un "meccanismo o sistema scrivente". L'energia elettrica è adeguatamente amplificata, in modo da poter trascrivere escursioni abbastanza ampie che consentano la registrazione di un segnale leggibile. Le deflessioni vengono impresse su carta, che si muove a velocità costante a contatto con il sistema che riporta sulla carta le onde registrate in funzione del tempo. Contemporaneamente all'oscillazione verticale delle linee prodotte dalle variazioni di potenziale, la carta scorre verso sinistra. Questa sincronizzazione permette di riportare il movimento verticale su un piano orizzontale, registrando le oscillazioni in rapporto alla loro durata nel tempo.
+		</p>
+		<p id="text"> I have coded for many years and am well-acquainted with OOP languages such as Java and Python.
+					  I have experience with languages such as ROOT, SQL and React-Native as well.  
 
-Nell'ECG a 12 derivazioni, quattro elettrodi sono posizionati sugli arti del paziente e sei sulla superficie del torace. La grandezza complessiva del potenziale elettrico del cuore viene quindi misurata da dodici diversi angoli ("derivazioni") e viene registrata per un periodo di tempo (in genere dieci secondi). In questo modo, l'ampiezza e la direzione generali della depolarizzazione elettrica del cuore vengono catturate in ogni momento e per tutto il ciclo cardiaco. </p>
-
-
-
+		</p>
+	
+		<p id="text"> In my free time, I love playing basketball, tennis, the violin, and enjoy taking photographs.
+					  Feel free to peruse my website!  
+		</p>
 
 
 </body>
