Tried to fix formatting.

--- a/index.html
+++ b/index.html
@@ -44,89 +44,92 @@ setTimeout(function() {
 });
 </script>
 
-<body>
-	<div id="parallax">
+<div class="wrapper">
+	<body>
+		<div id="parallax">
 
-		<div class = "animated fadeInDown">
-			<h1 class="header" id="name">Richard Chen</h1>
-		</div>
-
-		<div class = "animated fadeInUp">
-			<h1 class="header" id="description">student developer photographer</h1>
-		</div>
-
-		<div id="links">
-
-			<div class="tooltip">
-				<div id="facebook" style="display:none;">
-					<a target="_" href="https://www.facebook.com/richard.p.chen1" title="facebook" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/facebook.png" height=65px width=65px></span></a>
-				</div>
+			<div class = "animated fadeInDown">
+				<h1 class="header" id="name">Richard Chen</h1>
 			</div>
 
-			<div class="tooltip">
-
-				<div id="github" style="display:none;">
-					<a target="_" href="https://github.com/richard-chen169" title="github" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/github.png" height=65px width=65px></span></a>
-				</div>
+			<div class = "animated fadeInUp">
+				<h1 class="header" id="description">student developer photographer</h1>
 			</div>
 
-			<div class="tooltip">
-				<div id="linkedin" style="display:none;">
-					<a target="_" href="https://www.linkedin.com/in/richard-chen-4593bb142/" title="linkedin" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/linkedin.png" height=65px width=65px></span></a>
+			<div id="links">
+
+				<div class="tooltip">
+					<div id="facebook" style="display:none;">
+						<a target="_" href="https://www.facebook.com/richard.p.chen1" title="facebook" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/facebook.png" height=65px width=65px></span></a>
+					</div>
 				</div>
-			</div>
-			
-			<div class="tooltip">
-				<div id="flickr" style="display:none;">
-					<a target="_" href="https://www.flickr.com/people/154301761@N07/" title="flickr" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/flickr.png" height=65px width=65px></span></a>
+
+				<div class="tooltip">
+
+					<div id="github" style="display:none;">
+						<a target="_" href="https://github.com/richard-chen169" title="github" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/github.png" height=65px width=65px></span></a>
+					</div>
 				</div>
-			</div>
+
+				<div class="tooltip">
+					<div id="linkedin" style="display:none;">
+						<a target="_" href="https://www.linkedin.com/in/richard-chen-4593bb142/" title="linkedin" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/linkedin.png" height=65px width=65px></span></a>
+					</div>
+				</div>
 				
-			<div class="tooltip">
-				<div id="dreamstale" style="display:none;">
-					<a target="_" href="mailto:whoaitsrichard14@gmail.com" title="email" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/dreamstale.png" height=65px width=65px></span></a>
+				<div class="tooltip">
+					<div id="flickr" style="display:none;">
+						<a target="_" href="https://www.flickr.com/people/154301761@N07/" title="flickr" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/flickr.png" height=65px width=65px></span></a>
+					</div>
 				</div>
-			</div>
-
-			<div class="tooltip">
-				<div id="youtube" style="display:none;">
-					<a target="_" href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" title="youtube" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/youtube.png" height=65px width=65px></span></a>
+					
+				<div class="tooltip">
+					<div id="dreamstale" style="display:none;">
+						<a target="_" href="mailto:whoaitsrichard14@gmail.com" title="email" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/dreamstale.png" height=65px width=65px></span></a>
+					</div>
 				</div>
-			</div>
 
+				<div class="tooltip">
+					<div id="youtube" style="display:none;">
+						<a target="_" href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" title="youtube" class="tooltip"><span title=""><img class="icon" id="logopic" src="pictures/youtube.png" height=65px width=65px></span></a>
+					</div>
+				</div>
+
+			</div>
 		</div>
-	</div>
-
-	<img id="picture" src="pictures/profilecircle.jpg" >
-
-	<div class="about">
-		<h1 class="about">About Me</h1>
-		<p id="text">  Hi, my name is Richard Chen. I'm currently a sophomore at UC Berkeley studying Computer Science
-					   and Physics.
-		</p>
-
-		<p id="text">  I have many years of experience working in laboratory and research settings. I have previously worked
-						in labs such as the Space Power and Propulsion Laboratory at University of Maryland, College Park,
-						the National Institute of Standards and Technology, and Lawrence
-						Berkeley National Laboratory with Dr. Akito Kusaka on the POLARBEAR2 experiment.
-						I am currently working with Dr. Paul Fallon at Lawrence Berkeley National Laboratory on the 
-						<a target="_" href="http://gretina.lbl.gov/" title="GRETINA">GRETINA</a>
-						experiment investigating the efficiency of HPGe detectors.
-		</p>
-
-		<p id="text"> In 2017, I was honored as a Regeneron Science Talent Search semifinalist for my paper on the research
-					  I conducted at the Space Power and Propulsion Laboratory at UMD.  
-
-		</p>
-		<p id="text"> I have coded for many years and am well-acquainted with OOP languages such as Java and Python.
-					  I have experience with languages such as ROOT, SQL and React-Native as well.  
-
-		</p>
-	
-		<p id="text"> In my free time, I love playing basketball, tennis, the violin, and enjoy taking photographs.
-					  Feel free to peruse my website!  
-		</p>
 
 
-</body>
+		<div class="about">
+			<img src="pictures/profilecircle.jpg" align="middle" >
+			<h1 class="about">About Me</h1>
+			<p id="text">  Hi, my name is Richard Chen. I'm currently a sophomore at UC Berkeley studying Computer Science
+						   and Physics.
+			</p>
+
+			<p id="text">  I have many years of experience working in laboratory and research settings. I have previously worked
+							in labs such as the Space Power and Propulsion Laboratory at University of Maryland, College Park,
+							the National Institute of Standards and Technology, and Lawrence
+							Berkeley National Laboratory with Dr. Akito Kusaka on the POLARBEAR2 experiment.
+							I am currently working with Dr. Paul Fallon at Lawrence Berkeley National Laboratory on the 
+							<a target="_" href="http://gretina.lbl.gov/" title="GRETINA">GRETINA</a>
+							experiment investigating the efficiency of HPGe detectors.
+			</p>
+
+			<p id="text"> In 2017, I was honored as a Regeneron Science Talent Search semifinalist for my paper on the research
+						  I conducted at the Space Power and Propulsion Laboratory at UMD.  
+
+			</p>
+			<p id="text"> I have coded for many years and am well-acquainted with OOP languages such as Java and Python.
+						  I have experience with languages such as ROOT, SQL and React-Native as well.  
+
+			</p>
+		
+			<p id="text"> In my free time, I love playing basketball, tennis, the violin, and enjoy taking photographs.
+						  Feel free to peruse my website!  
+			</p>
+
+
+	</body>
+
+</div>
 </html>
