--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@ setTimeout(function() {
 
 <div class="wrapper">
 	<body>
+
+		<nav class = "navigation" id = "topnavbar">
+			<ul class = "nav-bar">
+
+				<li class = "nav_element" id = "nav_home"><a href="./index.html" class = "nav_link">Home</a></li>
+	  			<li class = "nav_element" id = "nav_projects"><a href="./projects.html" class = "nav_link">Projects</a></li>
+	  			<li class = "nav_element" id = "nav_resume"><a href="./pictures/DSC_0991.JPG" class = "nav_link" target="_">Resume</a></li>
+			</ul>
+  		</nav> 
+
 		<div id="parallax">
 			
 
