fixed some spacing issues, removed picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
-</head>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
@@ -49,17 +49,17 @@ setTimeout(function() {
 
 
 		<div id="parallax">
-			<nav class = "navigation" id = "topnavbar">
+			<nav class = "navigation" id = "topnavbar" position:"absolute">
 				<ul class = "nav-bar">
 
 					<li class = "nav_element" id = "nav_home"><a href="./index.html" class = "nav_link">Home</a></li>
 		  			<li class = "nav_element" id = "nav_projects"><a href="./projects.html" class = "nav_link">Projects</a></li>
-		  			<li class = "nav_element" id = "nav_resume"><a href="./pictures/DSC_0991.JPG" class = "nav_link" target="_">Resume</a></li>
+		  			<li class = "nav_element" id = "nav_resume"><a href="./documents/resume.pdf" class = "nav_link" target="_">Resume</a></li>
 				</ul>
 	  		</nav> 
 			
 
-			<div class="intro">
+			<div class="intro" position:"relative" z-index:10>
 
 				
 				<div class = "animated fadeInDown">
@@ -116,7 +116,7 @@ setTimeout(function() {
 
 
 		<div class="about">
-			<img src="pictures/profilecircle.jpg" align="middle" >
+			
 			<h1 class="about">About Me</h1>
 			<p id="text">  Hi, my name is Richard Chen. I'm currently a sophomore at UC Berkeley studying Computer Science
 						   and Physics.
