--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ setTimeout(function() {
 
 				<li class = "nav_element" id = "nav_home"><a href="./index.html" class = "nav_link">Home</a></li>
 	  			<li class = "nav_element" id = "nav_projects"><a href="./projects.html" class = "nav_link">Projects</a></li>
-	  			<li class = "nav_element" id = "nav_resume"><a href="./documents/resume.pdf" class = "nav_link" target="_">Resume</a></li>
+	  			<li class = "nav_element" id = "nav_resume"><a href="./resume.pdf" class = "nav_link" target="_">Resume</a></li>
 			</ul>
   		</nav> 
 		
