added concerts page

--- a/concerts.html
+++ b/concerts.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Photos | Concerts</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+<!--   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+ -->
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -33,6 +33,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
 </head>
 
 <body>
@@ -76,24 +77,139 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Colorizing Images of the Russian Empire</h2>
+          <h2>Concerts</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Colorization</li>
+            <li>Concerts</li>
           </ol>
         </div>
 
       </div>
     </section><!-- End Breadcrumbs -->
 
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 7px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+
     <!-- ======= Portfolio Details Section ======= -->
 <div class="container">
+  <h1>Concerts</h1>
+  <p>Here are some shots I've taken in the bay area by some talented bands.</p>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+  <div class="row">
+  <div class="column">
 
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_1.jpg" style="cursor:zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
 
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_2.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
 
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_3.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
 
+</div>
 
+<br>
+  <div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_4.jpg" style="cursor:zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_5.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_6.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+
+</div>
+
+<br>
+  <div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_7.jpg" style="cursor:zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_8.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_9.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+
+</div>
+<br>
+<div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_1.jpg" style="cursor:zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_2.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_3.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+
+</div>
+<br>
+<div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_4.jpg" style="cursor:zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_1.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_2.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+
+</div>
+<br>
+<div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_3.jpg" style="cursor:zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_4.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_5.jpg" style="cursor: zoom-in; width:100%; height:100%">
+  </div>
+
+</div>
 
 </div>
     <!-- End Portfolio Details Section -->
