--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -103,7 +103,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i>Projects</a></li>
-
+          <li><a href="#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
@@ -297,7 +297,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <h3>Colorization</h3>
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/self_portrait.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/self_portrait.jpg" class="img-fluid" alt="" height="100%">
 
               <div class="portfolio-links">
                 <a href="colorization.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -307,9 +307,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <h3>Filters and Frequencies</h3>
+          <h3>Filters</h3>
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/filters/dali.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/filters/dali.jpg" class="img-fluid" alt="" height="100%">
 
               <div class="portfolio-links">
                 <a href="filters.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -320,7 +320,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <h3>Face Morphing</h3>
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/morphing/morph.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/morphing/morph.jpg" class="img-fluid" alt="" height="50%">
 
               <div class="portfolio-links">
                 <a href="morphing.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -329,9 +329,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <h3>Classification and Segmentation</h3>
+            <h3>Classification</h3>
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/classification/y0.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/classification/y0.png" class="img-fluid" alt="" height="100%">
 
               <div class="portfolio-links">
                 <a href="classification.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -342,7 +342,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <h3>Lightfield Camera</h3>
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/lightfield/chess_0.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/lightfield/chess_0.png" class="img-fluid" alt="" height="100%">
 
               <div class="portfolio-links">
                 <a href="lightfield.html" title="More Details"><i class="bx bx-link"></i></a>
